deploy/desperado-frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: desperado-frontend
  name: desperado-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: desperado-frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: desperado-frontend
    spec:
      containers:
      - image: k3d-registry.localhost:5000/angular-desperado:v0.1
        name: angular-desperado
        resources: {}
        volumeMounts:
        - name: config
          mountPath: /usr/share/nginx/html/config
      volumes:
      - name: config
        configMap:
          name: config
          items:
          - key: cfg.json
            path: cfg.json
status: {}
