deploy/desperado-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: desperado-frontend
  name: desperado-frontend
spec:
  ports:
  - name: nginx
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: desperado-frontend
  type: ClusterIP
status:
  loadBalancer: {}
