deploy/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: null
  name: frontend
spec:
  rules:
  - host: app.localhost
    http:
      paths:
      - backend:
          service:
            name: desperado-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
